Прокинул параметры как магистр йода
