# backend/src/routes/router.ts
@@ -14,7 +14,7 @@ class ProductRouter extends BaseRouter{
     this.createHandleWithBody('post', '/products', (data) => ProductController.insert(data))
     this.createHandleWithParams('get', '/products/:id', (data)=> ProductController.getById(data), 'id')
     this.createHandleWithParams('delete', '/products/:id', (data) => ProductController.delete(data), 'id')
-    this.createHandleWithQueryParams('get', '/products/?', (data) => ProductController.search(data), 'product')
+    this.createHandleWithQueryParams('get', '/products/?', (data) => ProductController.search(...data), ['product', 'offset', 'limit'])
   }
 }
 
